# oopsla-23-submission-393

./: .gitignore  .gitmodules  00-matching-logic.mm0  01-propositional.mm1  02-ml-normalization.mm1  10-theory-definedness.mm0  11-definedness-normalization.mm1  12-proof-system-p.mm1  13-fixedpoints.mm1  20-theory-words.mm0  21-words-helpers.mm1  22-words-theorems.mm1  README.md  _automation.mm1  benchmark-agregator.py  benchmarks.py  conftest.py  install.sh  maude.py  proof-gen.py  pyproject.toml  regexp-proof-gen.maude  test  test.maude  test.py
.build/: benchmarks.csv
